--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name 162.0.237.75;
 
     location / {
         root /usr/share/nginx/html;
@@ -8,7 +8,7 @@ server {
     }
 
     location ~ /api {
-        proxy_pass http://162.0.237.75:8089;  # Remplacez par votre URL backend si nécessaire
+        proxy_pass http://162.0.237.75:8089;  
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
