--- a/src/nginx.conf
+++ b/src/nginx.conf
@@ -4,14 +4,17 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        index index.html;
+        try_files $uri /index.html;  # Important: rediriger toutes les requêtes non trouvées vers index.html
     }
 
-    location ~ /api {
-        proxy_pass http://162.0.237.75:8089;  # Remplacez par votre URL backend si nécessaire
+    location /api {
+        proxy_pass http://162.0.237.75:8089;  # Remplacez par l'URL de votre backend si nécessaire
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    error_page 404 /index.html;  # Optionnel : gérer les erreurs 404 côté Angular
 }
