--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,22 @@
 server {
     listen 80;
-    server_name 162.0.237.75;
+    server_name bedouinsstudios.com www.bedouinsstudios.com;
+    # Rediriger tout le trafic HTTP vers HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name bedouinsstudios.com www.bedouinsstudios.com;
+
+    ssl_certificate /etc/ssl/certs/www_bedouinsstudios_com.crt;
+    ssl_certificate_key /etc/ssl/private/www_bedouinsstudios.key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
-    }
-
-    location ~ /api {
-        proxy_pass http://162.0.237.75:8089;  
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
