--- a/nginx.conf
+++ b/nginx.conf
@@ -9,8 +9,7 @@ server {
     listen 443 ssl;
     server_name bedouinsstudios.com www.bedouinsstudios.com;
 
-    ssl_certificate /etc/ssl/certs/www_bedouinsstudios_com.crt;
-    ssl_certificate_key /etc/ssl/private/www_bedouinsstudios.key;
+    ssl_certificate BedouinClient\BeduinsFront\www_bedouinsstudios_com.crt;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
