--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,7 @@ server {
     server_name bedouinsstudios.com www.bedouinsstudios.com;
 
     ssl_certificate BedouinClient\BeduinsFront\www_bedouinsstudios_com.crt;
+    ssl_certificate_key BedouinClient\BeduinsFront\www_bedouinsstudios.key;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
