--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
     server_name bedouinsstudios.com www.bedouinsstudios.com;
-    # Rediriger tout le trafic HTTP vers HTTPS
+
+    # Redirection de HTTP vers HTTPS
     return 301 https://$host$request_uri;
 }
 
@@ -9,14 +10,14 @@ server {
     listen 443 ssl;
     server_name bedouinsstudios.com www.bedouinsstudios.com;
 
-    ssl_certificate BedouinClient/BeduinsFront/www_bedouinsstudios_com.crt;
-    ssl_certificate_key BedouinClientB/eduinsFront/www_bedouinsstudios.key;
+    ssl_certificate /etc/ssl/certs/www_bedouinsstudios_com.crt;  # Chemin vers le certificat
+    ssl_certificate_key /etc/ssl/private/www_bedouinsstudios.key;  # Chemin vers la clé privée
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        root /usr/share/nginx/html;  # Chemin vers le dossier où se trouvent les fichiers construits de votre application Angular
+        try_files $uri $uri/ /index.html;  # Pour les routes Angular
     }
 }
