--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,7 @@ server {
 
     ssl_certificate /etc/nginx/BedouinClient/BeduinsFront/www_bedouinsstudios_com.crt;
     ssl_certificate_key /etc/nginx/BedouinClient/BeduinsFront/www_bedouinsstudios.key;
+    ssl_certificate_key /etc/nginx/BedouinClient/BeduinsFront/www_bedouinsstudios_com.ca-bundle.;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
