--- a/nginx.conf
+++ b/nginx.conf
@@ -12,13 +12,21 @@ server {
 
     ssl_certificate /etc/nginx/BedouinClient/BeduinsFront/www_bedouinsstudios_com.crt;
     ssl_certificate_key /etc/nginx/BedouinClient/BeduinsFront/www_bedouinsstudios.key;
-    ssl_certificate_key /etc/nginx/BedouinClient/BeduinsFront/www_bedouinsstudios_com.ca-bundle.;
-
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
         root /usr/share/nginx/html;  # Chemin vers le dossier où se trouvent les fichiers construits de votre application Angular
         try_files $uri $uri/ /index.html;  # Pour les routes Angular
+    }
+
+    location /assets/webfonts/ {
+        alias /usr/share/nginx/html/assets/webfonts/;
+        add_header Access-Control-Allow-Origin *;  # Ajouter CORS si nécessaire
+        types {
+            application/font-woff2 woff2;
+            application/font-woff woff;
+            font/ttf ttf;
+        }
     }
 }
