--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,23 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
+    location /assets/webfonts/ {
+        alias /usr/share/nginx/html/assets/webfonts/;  # Adaptez le chemin si nécessaire
+        add_header Access-Control-Allow-Origin *;  # Pour les requêtes CORS, si nécessaire
+        types {
+            application/font-woff2 woff2;
+            application/font-woff woff;
+            font/ttf ttf;
+            font/otf otf;
+        }
+    }
+    location ~* /assets/webfonts/.*\.html$ {
+    deny all;
+}
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri /index.html;  # Important: rediriger toutes les requêtes non trouvées vers index.html
+    }
     location / {
         root /usr/share/nginx/html;  # Chemin vers le dossier où se trouvent les fichiers construits de votre application Angular
         try_files $uri $uri/ /index.html;  # Pour les routes Angular
