--- a/nginx.conf
+++ b/nginx.conf
@@ -15,9 +15,10 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
+    # Configuration pour le répertoire des polices
     location /assets/webfonts/ {
-        alias /usr/share/nginx/html/assets/webfonts/;  # Adaptez le chemin si nécessaire
-        add_header Access-Control-Allow-Origin *;  # Pour les requêtes CORS, si nécessaire
+        alias /usr/share/nginx/html/assets/webfonts/;  # Adaptez ce chemin si nécessaire
+        add_header Access-Control-Allow-Origin *;  # Ajouter CORS si nécessaire
         types {
             application/font-woff2 woff2;
             application/font-woff woff;
@@ -25,17 +26,15 @@ server {
             font/otf otf;
         }
     }
+
+    # Définir les règles pour bloquer les fichiers HTML (s'il y en a)
     location ~* /assets/webfonts/.*\.html$ {
-    deny all;
-}
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri /index.html;  # Important: rediriger toutes les requêtes non trouvées vers index.html
+        deny all;
     }
+
+    # Configuration principale pour le service Angular
     location / {
         root /usr/share/nginx/html;  # Chemin vers le dossier où se trouvent les fichiers construits de votre application Angular
         try_files $uri $uri/ /index.html;  # Pour les routes Angular
     }
-
-
 }
