--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,12 @@ server {
 
     # Configuration principale pour le service Angular
     location / {
-        try_files $uri $uri/ /index.html;  # Pour les routes Angular
+        try_files $uri $uri/ /index.html; 
+        add_header Cache-Control "no-store";  # Désactiver le cache pour les fichiers dynamiques
+
+    }
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|woff|woff2|ttf|otf)$ {
+        expires 1y;  # Mise en cache à long terme
+        add_header Cache-Control "public, max-age=31536000, immutable";  # Ajouter des en-têtes de cache
     }
 }
