--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,8 @@ server {
     ssl_certificate_key /etc/nginx/BedouinClient/BeduinsFront/www_bedouinsstudios_com.ca-bundle;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
-
+    error_log /var/log/nginx/bedouins_error.log;  # Spécifiez le fichier pour les logs d'erreur
+    access_log /var/log/nginx/bedouins_access.log;
     # Configuration pour le répertoire des polices
     location /assets/webfonts/ {
         alias /usr/share/nginx/html/assets/webfonts/;  # Adaptez ce chemin si nécessaire
